# ETH_Price_Movement_Analysis

./: Makefile  README.md  pyproject.toml
eth_price_movement_analysis/: __init__.py  api_requests.py  eth_independent_movements_analysis.py  eth_price_monitor.py  eth_price_tracker.py  main.py  price_analysis.py  test.py  test2.py  test3.py  test4.py
tests/: test_eth_price_monitor.py
