[tool.poetry]
name = "eth-price-movement-analysis"
version = "0.1.0"
description = ""
authors = ["kamran <kamran.abulov@gmail.com>"]
readme = "README.md"
packages = [{include = "eth_price_movement_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
aiohttp = "^3.8.4"
statsmodels = "^0.14.0"
ccxt = "^3.0.98"
scikit-learn = "^1.2.2"
websockets = "^11.0.3"
binance = "^0.3"
python-binance = "^1.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
